# firmware_perceptron

./: LICENSE  README.md  sdkconfig.defaults
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
components/ackermann_kinematics/: CMakeLists.txt  idf_component.yml
components/ackermann_kinematics/include/: kinematics.h
components/ackermann_kinematics/src/: kinematics.c
components/common_utils/: CMakeLists.txt  idf_component.yml
components/esp32_can/: CMakeLists.txt  idf_component.yml
components/esp32_can/include/: can_conf.h  can_interface.h  can_rtr.h
components/esp32_can/src/: can_dispatcher.c  can_interface.c
components/esp32_servo/: CMakeLists.txt  idf_component.yml
components/mros/: CMakeLists.txt  idf_component.yml
components/mros/include/: mros.h  mros_conf.h
components/mros/src/: mros.c  mros_param.c
components/odrive_can/: CMakeLists.txt  idf_component.yml
components/odrive_can/include/: odrive.h  odrive_conf.h  odrive_types.h
components/odrive_can/src/: odrive.c
main/: CMakeLists.txt  Kconfig.projbuild  ble_transport.c  idf_component.yml  main.c
main/can/: can_dispatcher.c  can_interface.c  can_interface.h
main/include/: ble_transport.h  robot_controller.h
main/kinematics/: kinematics.c  kinematics.h
main/odrive/: odrive.c  odrive_conf.h
main/robot_controller/: robot_controller.c
main/servo/: servo.c
main/src/: main.c
main/src/robot_controller/: robot_controller.c
playground/microros_ble_transport/: CMakeLists.txt  ble_transport.c  ble_transport.h  main.c
